hw17/k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library
  labels:
    app: library
spec:
  type: ClusterIP
  selector:
    app: library
  ports:
    - name: http
      port: 80
      targetPort: http
